Nether -> Kal'Balzar

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1,3 +1,49 @@
 {
-	"item.minecraft.music_disc_11.desc": "C418 - Eleven"
+	"item.minecraft.music_disc_11.desc": "C418 - Eleven",
+	"options.screenEffectScale.tooltip": "Strength of nausea and Kal'Balzar portal screen distortion effects.\nAt lower values, the nausea effect is replaced with a green overlay.",
+	"block.minecraft.nether_gold_ore": "Kal'Balzar Gold Ore",
+	"block.minecraft.nether_brick_slab": "Kal'Balzar Brick Slab",
+	"block.minecraft.netherrack": "Kal'Balzarrack",
+	"block.minecraft.nether_portal": "Kal'Balzar Portal",
+	"block.minecraft.nether_bricks": "Kal'Balzar Bricks",
+  	"block.minecraft.nether_brick_fence": "Kal'Balzar Brick Fence",
+  	"block.minecraft.nether_brick_stairs": "Kal'Balzar Brick Stairs",
+  	"block.minecraft.nether_wart": "Kal'Balzar Wart",
+	"block.minecraft.nether_sprouts": "Kal'Balzar Sprouts",
+	"block.minecraft.nether_quartz_ore": "Kal'Balzar Quartz Ore",
+	"block.minecraft.nether_wart_block": "Kal'Balzar Wart Block",
+ 	"block.minecraft.red_nether_bricks": "Red Kal'Balzar Bricks",
+	"block.minecraft.red_nether_brick_stairs": "Red Kal'Balzar Brick Stairs",
+	"block.minecraft.red_nether_brick_slab": "Red Kal'Balzar Brick Slab",
+	"block.minecraft.nether_brick_wall": "Kal'Balzar Brick Wall",
+	"block.minecraft.red_nether_brick_wall": "Red Kal'Balzar Brick Wall",
+	"block.minecraft.netherite_block": "Block of Kal'Balzarite",
+	"block.minecraft.cracked_nether_bricks": "Cracked Kal'Balzar Bricks",
+  	"block.minecraft.chiseled_nether_bricks": "Chiseled Kal'Balzar Bricks",
+	"item.minecraft.nether_wart": "Kal'Balzar Wart",
+	"item.minecraft.nether_star": "Kal'Balzar Star",
+	"item.minecraft.nether_brick": "Kal'Balzar Brick",
+  	"item.minecraft.quartz": "Kal'Balzar Quartz",
+	"item.minecraft.netherite_scrap": "Kal'Balzarite Scrap",
+	"item.minecraft.netherite_ingot": "Kal'Balzarite Ingot",
+	"item.minecraft.netherite_helmet": "Kal'Balzarite Helmet",
+	"item.minecraft.netherite_chestplate": "Kal'Balzarite Chestplate",
+	"item.minecraft.netherite_leggings": "Kal'Balzarite Leggings",
+	"item.minecraft.netherite_boots": "Kal'Balzarite Boots",
+	"item.minecraft.netherite_axe": "Kal'Balzarite Axe",
+	"item.minecraft.netherite_pickaxe": "Kal'Balzarite Pickaxe",
+	"item.minecraft.netherite_hoe": "Kal'Balzarite Hoe",
+	"item.minecraft.netherite_shovel": "Kal'Balzarite Shovel",
+	"item.minecraft.netherite_sword": "Kal'Balzarite Sword",
+	"subtitles.item.armor.equip_netherite": "Kal'Balzarite armor clanks",
+	"advancements.husbandry.netherite_hoe.description": "Use a Kal'Balzarite ingot to upgrade a hoe, and then reevaluate your life choices",
+	"advancements.nether.find_fortress.description": "Break your way into a Kal'Balzar Fortress",
+	"advancements.nether.root.title": "Kal'Balzar",
+	"advancements.nether.fast_travel.description": "Use Kal'Balzar to travel 7 km in the Overworld",
+	"advancements.nether.uneasy_alliance.description": "Rescue a Ghast from Kal'Balzar, bring it safely home to the Overworld... and then kill it",
+	"advancements.nether.netherite_armor.description": "Get a full suit of Kal'Balzarite armor",
+	"advancements.nether.explore_nether.description": "Explore all Kal'Balzar biomes",
+	"advancements.story.enter_the_nether.description": "Build, light and enter a Kal'Balzar Portal",
+	"biome.minecraft.nether_wastes": "Kal'Balzar Wastes",
+	
 }
