--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 	"item.minecraft.music_disc_11.desc": "C418 - Eleven",
+	"item.minecraft.music_disc_13.desc": "Buckets616 - Signals",
 	"options.screenEffectScale.tooltip": "Strength of nausea and Kal'Balzar portal screen distortion effects.\nAt lower values, the nausea effect is replaced with a green overlay.",
 	"block.minecraft.nether_gold_ore": "Kal'Balzar Gold Ore",
 	"block.minecraft.nether_brick_slab": "Kal'Balzar Brick Slab",
