--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -45,6 +45,5 @@
 	"advancements.nether.netherite_armor.description": "Get a full suit of Kal'Balzarite armor",
 	"advancements.nether.explore_nether.description": "Explore all Kal'Balzar biomes",
 	"advancements.story.enter_the_nether.description": "Build, light and enter a Kal'Balzar Portal",
-	"biome.minecraft.nether_wastes": "Kal'Balzar Wastes",
-	
+	"biome.minecraft.nether_wastes": "Kal'Balzar Wastes"
 }
